syntax = "proto3";

package game;

option go_package = "server/pkg/proto";

// 消息类型枚举
enum MessageType {
  UNKNOWN = 0;
  JOIN = 1;              // 玩家加入
  LEAVE = 2;             // 玩家离开
  PLAYER_UPDATE = 3;     // 玩家位置更新
  SPAWN_PLAYER = 4;      // 生成玩家
  REMOVE_PLAYER = 5;     // 移除玩家
  PLAYER_LIST = 6;       // 玩家列表
}

// 向量3D
message Vector3 {
  float x = 1;
  float y = 2;
  float z = 3;
}

// 四元数旋转
message Quaternion {
  float x = 1;
  float y = 2;
  float z = 3;
  float w = 4;
}

// 颜色
message Color {
  float r = 1;
  float g = 2;
  float b = 3;
}

// 玩家数据
message Player {
  string id = 1;
  string username = 2;
  Vector3 position = 3;
  Quaternion rotation = 4;
  Color color = 5;
}

// 加入请求（客户端发送）
message JoinRequest {
  // 空消息，服务器会自动分配用户名
}

// 加入响应（服务器发送）
message JoinResponse {
  string player_id = 1;
  string username = 2;
  Color color = 3;
  Vector3 spawn_position = 4;
}

// 玩家更新（客户端发送）
message PlayerUpdateRequest {
  Vector3 position = 1;
  Quaternion rotation = 2;
}

// 玩家更新广播（服务器发送）
message PlayerUpdateBroadcast {
  string player_id = 1;
  Vector3 position = 2;
  Quaternion rotation = 3;
}

// 生成玩家通知（服务器发送给其他玩家）
message SpawnPlayerNotification {
  Player player = 1;
}

// 移除玩家通知（服务器发送）
message RemovePlayerNotification {
  string player_id = 1;
}

// 玩家列表（服务器发送给新加入的玩家）
message PlayerListResponse {
  repeated Player players = 1;
}

// 游戏消息包装器
message GameMessage {
  MessageType type = 1;

  oneof payload {
    JoinRequest join_request = 2;
    JoinResponse join_response = 3;
    PlayerUpdateRequest player_update_request = 4;
    PlayerUpdateBroadcast player_update_broadcast = 5;
    SpawnPlayerNotification spawn_player = 6;
    RemovePlayerNotification remove_player = 7;
    PlayerListResponse player_list = 8;
  }
}
